--- a/app/index.html
+++ b/app/index.html
@@ -8,35 +8,58 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>ScaleDC</title>
     <meta name="description" content="">
-    <meta name="keywords" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <!-- build:css styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
+    <!-- build:js scripts/vendor/modernizr.js -->
+    <script src="components/modernizr/modernizr.js"></script>
     <!-- endbuild -->
   </head>
-  <body ng-app="scaledc.orgApp">
+  <body>
+    <div class="container">
+      <div class="hero-unit">
+        <h1>'Allo, 'Allo!</h1>
+        <p>You now have</p>
+        <ul>
+          <li>HTML5 Boilerplate</li>
+          <li>Twitter Bootstrap</li>
+          <li>Font Awesome</li>
+        </ul>
+        <p>installed.</p>
+        <h3>Enjoy coding! - Yeoman</h3>
+      </div>
+    </div>
+
     <!--[if lt IE 7]>
-      <p class="chromeframe">You are using an outdated browser. <a href="http://browsehappy.com/">Upgrade your browser today</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to better experience this site.</p>
+      <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
     <![endif]-->
 
-    <!--[if lt IE 9]>
-      <script src="components/es5-shim/es5-shim.js"></script>
-      <script src="components/json3/lib/json3.min.js"></script>
-    <![endif]-->
+    <script>
+      var _gaq=[['_setAccount','UA-41226650-1'],['_trackPageview']];
+      (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
+      g.src='//www.google-analytics.com/ga.js';
+      s.parentNode.insertBefore(g,s)}(document,'script'));
+    </script>
 
-    <!-- Add your site or application content here -->
-    <div class="container" ng-view></div>
+        <!-- build:js scripts/main.js -->
+        <script src="components/jquery/jquery.js"></script>
+        <script src="scripts/app.js"></script>
+        <!-- endbuild -->
 
-    <script src="components/angular/angular.js"></script>
-    <script src="components/angular-resource/angular-resource.js"></script>
-    <script src="components/angular-cookies/angular-cookies.js"></script>
-    <script src="components/angular-sanitize/angular-sanitize.js"></script>
-    <script src="components/scientist.js/scientist.min.js"></script>
-
-    <!-- build:js scripts/scripts.js -->
-    <script src="scripts/app.js"></script>
-    <script src="scripts/controllers/main.js"></script>
-    <!-- endbuild -->
-  </body>
+        <!-- build:js scripts/vendor/bootstrap.js -->
+        <script src="components/bootstrap/js/bootstrap-affix.js"></script>
+        <script src="components/bootstrap/js/bootstrap-alert.js"></script>
+        <script src="components/bootstrap/js/bootstrap-dropdown.js"></script>
+        <script src="components/bootstrap/js/bootstrap-tooltip.js"></script>
+        <script src="components/bootstrap/js/bootstrap-modal.js"></script>
+        <script src="components/bootstrap/js/bootstrap-transition.js"></script>
+        <script src="components/bootstrap/js/bootstrap-button.js"></script>
+        <script src="components/bootstrap/js/bootstrap-popover.js"></script>
+        <script src="components/bootstrap/js/bootstrap-typeahead.js"></script>
+        <script src="components/bootstrap/js/bootstrap-carousel.js"></script>
+        <script src="components/bootstrap/js/bootstrap-scrollspy.js"></script>
+        <script src="components/bootstrap/js/bootstrap-collapse.js"></script>
+        <script src="components/bootstrap/js/bootstrap-tab.js"></script>
+        <!-- endbuild -->
+</body>
 </html>
